[gd_scene load_steps=3 format=3 uid="uid://c37e7mq2aivhl"]

[ext_resource type="Script" path="res://menus/main_menu/menu.gd" id="1_xfcws"]
[ext_resource type="PackedScene" uid="uid://c4kiyktmxw3i5" path="res://menus/main_menu/opcoes_menu.tscn" id="13_5fyjp"]

[node name="menu" type="Node2D" groups=["main_menu"]]
script = ExtResource("1_xfcws")

[node name="Capa" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Audio" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 818.0
offset_top = 792.0
offset_right = 1102.0
offset_bottom = 1051.0
pivot_offset = Vector2(142, 0)
alignment = 1

[node name="IniciarButton" type="TextureButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="OpcoesButton" type="TextureButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="SairButton" type="TextureButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OpcoesMenu" parent="CanvasLayer" instance=ExtResource("13_5fyjp")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="VBoxContainer/IniciarButton" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="VBoxContainer/OpcoesButton" to="." method="_on_opcoes_pressed"]
[connection signal="pressed" from="VBoxContainer/SairButton" to="." method="_on_sair_pressed"]
